<resources>
    <string name="app_name">Todo list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Hello,  Welcome</string>
    <string name="today">Today</string>
    <string name="planned">Planned</string>
    <string name="personal">Personal</string>
    <string name="Work">Work</string>
    <string name="Shopping">Shopping</string>
    <string name="activityName">e.g gym, go out</string>
    <string name="description">Description</string>

</resources>